--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   get: ^4.6.6
   intl: ^0.19.0
   fl_chart: ^0.69.0
+  firebase_core: ^3.5.0
+  cloud_firestore: ^5.4.2
+  firebase_auth: ^5.3.0
 
 dev_dependencies:
   flutter_test:
