--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
 
   cupertino_icons: ^1.0.6
   get: ^4.6.6 # State Management!
+  get_it: ^8.0.0
+  intl: ^0.19.0
   shared_preferences: ^2.2.2 # Local Storage!
   cloud_firestore: ^5.4.2 # server Storage!
   firebase_core: ^3.5.0
@@ -23,7 +25,6 @@ dependencies:
   shimmer: ^3.0.0
 
   # Localization!
-  intl: ^0.19.0
   image_picker: ^1.1.2
   file_picker: ^8.0.6
   flutter_image_compress: ^2.1.0
