--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   get: ^4.6.6 # State Management!
   get_it: ^8.0.0
+  uuid: ^4.5.1
   intl: ^0.19.0
   shared_preferences: ^2.2.2 # Local Storage!
   cloud_firestore: ^5.4.2 # server Storage!
