--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: swapnabaj
-description: "Swapnabaj - Bondhu Mohol"
+description: "Swapnabaj - Bondhu Mohol Apps"
 publish_to: 'none'
 
 version: 1.0.0+1
@@ -11,32 +11,32 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.8
   get: ^4.6.6 # State Management!
-  get_it: ^8.0.0
+  get_it: ^8.0.3
   uuid: ^4.5.1
-  intl: ^0.19.0
-  shared_preferences: ^2.2.2 # Local Storage!
-  cloud_firestore: ^5.4.2 # server Storage!
-  firebase_storage: ^12.3.2
-  firebase_core: ^3.5.0
-  firebase_auth: ^5.3.0
+  intl: ^0.20.1
+  shared_preferences: ^2.3.3 # Local Storage!
+  cloud_firestore: ^5.5.1 # server Storage!
+  firebase_storage: ^12.3.7
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.4
 
   # UI Helpers!
-  fl_chart: ^0.69.0
+  fl_chart: ^0.69.2
   pin_code_fields: ^8.0.1
   shimmer: ^3.0.0
 
   # Localization!
   image_picker: ^1.1.2
-  file_picker: ^8.0.6
-  flutter_image_compress: ^2.1.0
+  file_picker: ^8.1.5
+  flutter_image_compress: ^2.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.0
+  flutter_lints: ^5.0.0
 
 flutter:
 
