--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,10 +28,10 @@ android {
 
     defaultConfig {
         applicationId = "com.example.swapnabaj"
-        minSdkVersion 23
-        targetSdkVersion 34
-        versionCode flutterVersionCode.toInteger()
-        versionName flutterVersionName
+        minSdk = flutter.minSdkVersion
+        targetSdk = flutter.targetSdkVersion
+        versionCode = flutterVersionCode.toInteger()
+        versionName = flutterVersionName
     }
 
     buildTypes {
