--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -19,7 +19,7 @@ def flutterVersionName = localProperties.getProperty("flutter.versionName") ?: "
 
 android {
     namespace = "com.example.swapnabaj"
-    compileSdk = 34 // Update to match your project
+    compileSdk = 35
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_17
